--- a/LearningTask-5.2/View/Base.lproj/Main.storyboard
+++ b/LearningTask-5.2/View/Base.lproj/Main.storyboard
@@ -4,16 +4,15 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
-        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Relatorio De Despesas View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="LearningTask_5_2" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="RelatorioDeDespesasViewController" customModule="LearningTask_5_2" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="bd2-5A-GSF">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -111,6 +110,9 @@
                                                             <fontDescription key="titleFontDescription" type="system" pointSize="12"/>
                                                             <color key="baseBackgroundColor" name="Downriver"/>
                                                         </buttonConfiguration>
+                                                        <connections>
+                                                            <action selector="botaoAdicionarDespesaPressionado:" destination="BYZ-38-t0r" eventType="touchUpInside" id="acf-Yr-spw"/>
+                                                        </connections>
                                                     </button>
                                                 </subviews>
                                             </stackView>
@@ -163,6 +165,9 @@
                                             <color key="baseForegroundColor" name="Iron"/>
                                             <color key="baseBackgroundColor" name="Downriver"/>
                                         </buttonConfiguration>
+                                        <connections>
+                                            <action selector="botaoRegistrarDespesasPressionado:" destination="BYZ-38-t0r" eventType="touchUpInside" id="KEw-wr-dHk"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <directionalEdgeInsets key="directionalLayoutMargins" top="0.0" leading="24" bottom="24" trailing="24"/>
@@ -177,6 +182,14 @@
                             <constraint firstItem="Mbq-U2-pmi" firstAttribute="bottom" secondItem="toW-lW-9em" secondAttribute="bottom" id="iqT-lo-NYs"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="listaDeDespesasView" destination="SB7-hd-QBo" id="Nuk-aV-jeU"/>
+                        <outlet property="registraButton" destination="4X3-SB-cFC" id="Umb-xh-tIl"/>
+                        <outlet property="tipoTextField" destination="4UR-y8-A7X" id="siu-sx-rur"/>
+                        <outlet property="tituloTextField" destination="iws-aO-JyQ" id="wGS-Tt-pud"/>
+                        <outlet property="valorTextField" destination="fGE-Yv-MEV" id="MeQ-dj-IS5"/>
+                        <outlet property="valorTotalLabel" destination="ryl-xJ-Vlr" id="xjW-kc-IYz"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
